CICD/sample_python_app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-python-app
  labels:
    app: sample-python-app
spec:
  type: LoadBalancer
  selector:
    app: sample-python-app
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
